A lot of font and spacing edits, fixed border image issue, added base styles

--- a/css/base.css
+++ b/css/base.css
@@ -28,6 +28,7 @@ main, menu, nav, section, summary {
 
 a {
   background-color: transparent;
+  text-decoration: none;
 }
 
 
@@ -42,54 +43,59 @@ html {
   font-size: 62.5%; }
 
 h1, h2 {
-  margin-top: 0;
-  margin-bottom: 2rem;}
+  margin: 0;
+}
 
 h1 {
-  font-size: 3.5rem;
-/*  margin: 0.67em 0;*/
+  font-size: 3.3rem;
+  margin-bottom: 0;
 }
 
 h2 {
   font-family: 'Abel', sans-serif;
+  font-size: 1.5rem;
 }
 
 p {
   line-height: 1.7;
   font-family: 'Droid Serif', serif;
+  color: #292929;
   font-size: 1.8rem;
   margin-top: 15px;
   margin-bottom: 15px;
 }
 
-li {
-    font-family: 'Patrick Hand', cursive;
-    font-size: 1.9rem;
-}
 
 /* Larger than phablet */
 @media (min-width: 550px) {
-  h1 { font-size: 3.8rem; }
-  h2 { font-size: 2rem; }
+  h1 { font-size: 3.3rem; }
+  h2 { font-size: 1.5rem; }
 
 
 
 /* Links
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 a {
-  color: #1EAEDB; }
+  color: #1EAEDB;
+  text-decoration: none;
+  font-family: 'Abel', sans-serif;
+}
 
 
 /* Lists
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
-ul ul,
-ul ol,
-ol ol,
-ol ul {
-  margin: 1.5rem 0 1.5rem 3rem;}
+ul {
+  list-style: none;
+  line-height: .5;
+}
+
 li {
-  margin-bottom: 1rem; }
+  margin-bottom: 1rem;
+  font-family: 'Patrick Hand', cursive;
+  font-size: 1.9rem;
+  color: #292929;
+}
 
 
 
